<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>health-data-analytics-parent</artifactId>
	<groupId>org.snomed.analytics</groupId>
	<version>4.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>model</module>
		<module>generator</module>
		<module>ui</module>
		<module>server</module>
	</modules>

	<name>SNOMED Health Data Analytics Demonstrator</name>
	<description>Health Data Analytics Tool with Subsumption Testing</description>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>kaicode</id>
			<name>Kai Kewley</name>
			<email>kke at snomed.org</email>
			<organization>SNOMED International</organization>
			<organizationUrl>http://www.snomed.org</organizationUrl>
			<roles>
				<role>Project lead</role>
			</roles>
		</developer>
	</developers>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.3.RELEASE</version>
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<!-- Elasticsearch client version comes from spring-boot-starter-data-elasticsearch > spring-data-elasticsearch -->
		<elasticsearch.version>7.10.2</elasticsearch.version>
		<hapi-fhir.version>5.1.0</hapi-fhir.version>
	</properties>
	<dependencies>
		<!-- Spring Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
		<!-- HAPI FHIR -->
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-base</artifactId>
			<version>${hapi-fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-client</artifactId>
			<version>${hapi-fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-structures-r4</artifactId>
			<version>${hapi-fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-structures-dstu3</artifactId>
			<version>${hapi-fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>ihtsdo-releases</id>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-snapshots</id>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://maven.ihtsdotools.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
